# django

./: .gitignore  README.md  gen_secret.py  pyproject.toml
source/local/api/: apps.py  models.py  serializers.py  urls.py  views.py
source/local/api/migrations/: 0001_initial.py
source/local/authentication/: apps.py
source/local/pages/: apps.py  urls.py  views.py
source/main/: settings.py  urls.py
source/main/templates/includes/: navigation.html
tests/local/api/models/: test_genre.py
